# louvores

./: .gitignore  2scraping.py  AGENTS.md  LICENSE  README.md  db.py  db.sqlite  db_backup.sqlite  main.py  models.py  pyproject.toml  slides.pptx
data/: data_to_load.csv  hinos.db
data/raw/: CC_HCC.csv  coletaneas.csv  data_to_load.csv
data/raw/txt/: CC-001.txt  CC-002.txt  CC-003.txt  CC-004.txt  CC-006.txt  CC-008.txt  CC-009.txt  CC-010.txt
data/templates/: atual.pptx  novo.pptx
hinos_txt/CC/: 005.txt  007.txt
scripts/: import_data.py  init_db.py  scraping.py
src/core/: config.py
src/db/: database.py  models.py  repository.py
src/louvores/cli/: app.py
src/louvores/core/: config.py  logging_config.py
src/louvores/db/: database.py  models.py  repository.py
src/louvores/domain/: slide_parts.py
src/louvores/ppt/: layouts.py  ppt_generator.py  template_registry.py
src/louvores/processors/: lyrics_parser.py
src/louvores/services/: import_service.py  revisao_service.py  slide_service.py  stats_service.py
src/services/: hymn_service.py  import_service.py
tests/: conftest.py
tests/db/: test_db.py
tests/ppt/: test_ppt_generator.py
tests/processors/: test_lyrics_parser.py
