[project]
name = "louvores"
version = "0.1.0"
description = "Criação automatizada de slides para louvores"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.58.0",
    "python-pptx>=1.0.2",
    "sqlmodel>=0.0.37",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
louvores = "src.louvores.cli.app:app"