[project]
name = "louvores"
version = "0.1.0"
description = "Criação automatizada de slides para louvores"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.58.0",
    "python-pptx>=1.0.2",
    "peewee>=3.17.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "anthropic>=0.100.0",
    "openai>=2.36.0",
    "openpyxl>=3.1.5",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
]

[project.scripts]
louvores = "src.louvores.cli.app:app"
